[gd_scene load_steps=6 format=3 uid="uid://cpht55eomw74t"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_i0k2m"]
[ext_resource type="PackedScene" uid="uid://bkl3j8h0m2aqt" path="res://Pinball/Prefabs/ball.tscn" id="1_p40qp"]
[ext_resource type="PackedScene" uid="uid://bw17fyon10e7g" path="res://Pinball/Prefabs/bat.tscn" id="2_vetbr"]
[ext_resource type="PackedScene" uid="uid://bieqbvuutyss7" path="res://Pinball/Prefabs/block.tscn" id="3_bvj3g"]
[ext_resource type="PackedScene" uid="uid://d1kc84fxggvlq" path="res://scenes/prefab_wall.tscn" id="5_vua2i"]

[node name="Level" type="Node2D"]
script = ExtResource("1_i0k2m")

[node name="ball" parent="." instance=ExtResource("1_p40qp")]
position = Vector2(409, 285)

[node name="bat" parent="." instance=ExtResource("2_vetbr")]
position = Vector2(400, 550)

[node name="block" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(371, 73)

[node name="block2" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(274, 74)

[node name="block3" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(553, 74)

[node name="block4" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(645, 74)

[node name="block5" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(458, 74)

[node name="block6" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(185, 77)

[node name="block7" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(281, 149)

[node name="block8" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(184, 150)

[node name="block9" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(463, 150)

[node name="block10" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(555, 150)

[node name="block11" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(368, 150)

[node name="block12" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(646, 151)

[node name="score_label" type="Label" parent="."]
offset_left = 47.0
offset_top = 44.0
offset_right = 87.0
offset_bottom = 67.0
text = "000"
metadata/_edit_use_anchors_ = true

[node name="prefab_wall" parent="." instance=ExtResource("5_vua2i")]
position = Vector2(151, 0)
scale = Vector2(10, 2)

[node name="prefab_wall2" parent="." instance=ExtResource("5_vua2i")]
position = Vector2(666, 0)
scale = Vector2(10, 2)

[node name="prefab_wall3" parent="." instance=ExtResource("5_vua2i")]
position = Vector2(-7, 309)
scale = Vector2(2, 24)

[node name="prefab_wall4" parent="." instance=ExtResource("5_vua2i")]
position = Vector2(804, 320)
scale = Vector2(2, 24)

[node name="bat2" parent="." instance=ExtResource("2_vetbr")]
position = Vector2(1388, 561)

[node name="block13" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1359, 84)

[node name="block14" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1262, 85)

[node name="block15" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1541, 85)

[node name="block16" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1633, 85)

[node name="block17" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1446, 85)

[node name="block18" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1173, 88)

[node name="block19" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1269, 160)

[node name="block20" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1172, 161)

[node name="block21" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1451, 161)

[node name="block22" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1543, 161)

[node name="block23" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1356, 161)

[node name="block24" parent="." instance=ExtResource("3_bvj3g")]
position = Vector2(1634, 162)

[node name="score_label2" type="Label" parent="."]
offset_left = 1035.0
offset_top = 55.0
offset_right = 1075.0
offset_bottom = 78.0
text = "000"
metadata/_edit_use_anchors_ = true

[node name="prefab_wall5" parent="." instance=ExtResource("5_vua2i")]
position = Vector2(1139, 11)
scale = Vector2(10, 2)

[node name="prefab_wall6" parent="." instance=ExtResource("5_vua2i")]
position = Vector2(1654, 11)
scale = Vector2(10, 2)

[node name="prefab_wall7" parent="." instance=ExtResource("5_vua2i")]
position = Vector2(981, 320)
scale = Vector2(2, 24)

[node name="prefab_wall8" parent="." instance=ExtResource("5_vua2i")]
position = Vector2(1792, 331)
scale = Vector2(2, 24)

[connection signal="add_score" from="ball" to="." method="_on_ball_add_score"]
